--- a/locales/de.json
+++ b/locales/de.json
@@ -32,5 +32,12 @@
         }
       }
     }
+  },
+  "members": {
+    "create": {
+      "submit": {
+        "label": "Mitglied anlegen"
+      }
+    }
   }
 }
