--- a/locales/de.json
+++ b/locales/de.json
@@ -34,6 +34,9 @@
     }
   },
   "members": {
+    "list": {
+      "create-member": "Neues Mitglied"
+    },
     "create": {
       "submit": {
         "label": "Mitglied anlegen"
